added more paragraphs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <!--Example of a standard element-->
+    <!--example of type-->
     <p>Hello World!</p>
+    <!--Example of an void element -->
+    <br>
+
+    <!--example of id-->
+    <p id="example-of-id">Example of ID selector</p>
+
+    <!--example of class-->
+    <p class="example-of-class">Example of ID selector</p>
+
+    <!--example of pseudo-class-->
+    <p>Example of a <a href="#">pseudo-class</a>selector</p>
+
+    <p>Example of a pseudo-element</p>
+    <!--example of pseudo-element-->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eaque fuga quos beatae, excepturi ipsum! Fugit nobis, accusantium vel cumque laborum ullam perferendis velit officia, culpa illo, maiores nihil dignissimos?</p>
+
+
+
+
+
+
 </body>
 </html>
